- Fix layout problem in target panel

--- a/src/storyq.css
+++ b/src/storyq.css
@@ -132,6 +132,7 @@ p {
 .sq-target-lower-panel {
     margin: 5px;
     width: 100%;
+    height: 100vh;
     flex: 1 1 auto;
     display: flex;
     flex-direction: row;
